--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cached": "^1.1.0",
+    "gulp-clean-css": "^2.0.12",
     "gulp-concat-css": "^2.3.0",
     "gulp-if": "^2.0.1",
     "gulp-jade": "^1.1.0",
